編集モード名をネイティブから取得するように変更

--- a/curve_editor/ui/panel_editor.html
+++ b/curve_editor/ui/panel_editor.html
@@ -11,14 +11,7 @@
     <div class="menu-bottom">
         <div class="menu-row">
             <div class="menu-button dropdown-container" id="edit-mode-container">
-                <select class="dropdown" name="edit-mode" id="edit-mode" title="編集モード">
-                    <option class="dropdown-option" value="0">標準</option>
-                    <option class="dropdown-option" value="1">値指定</option>
-                    <option class="dropdown-option" value="2">ベジェ</option>
-                    <option class="dropdown-option" value="3">振動</option>
-                    <option class="dropdown-option" value="4">バウンス</option>
-                    <option class="dropdown-option" value="5">スクリプト</option>
-                </select>
+                <select class="dropdown" name="edit-mode" id="edit-mode" title="編集モード"></select>
             </div>
             <div class="menu-buttons-id">
                 <button class="menu-button" id="button-id-back" style="width: 25%;" title="前のIDに戻る">
