--- a/curve_editor/ui/editor_text.html
+++ b/curve_editor/ui/editor_text.html
@@ -13,6 +13,7 @@
     <script src="js/libs/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
     <script src="js/libs/monaco-editor/min/vs/editor/editor.main.js"></script>
     <script src="js/libs/monaco-editor/min/vs/basic-languages/lua/lua.js"></script>
+    <script src="js/host_object.js"></script>
     <script src="js/editor_text.js"></script>
 </body>
 </html>
