パラメータボタンの設置

--- a/curve_editor/ui/panel_editor.html
+++ b/curve_editor/ui/panel_editor.html
@@ -13,16 +13,7 @@
             <div class="menu-button dropdown-container" id="edit-mode-container">
                 <select class="dropdown" name="edit-mode" id="edit-mode" title="編集モード"></select>
             </div>
-            <div class="menu-buttons-id">
-                <button class="menu-button" id="button-id-back" style="width: 25%;" title="前のIDに戻る">
-                    <i class="fa-solid fa-angle-left"></i>
-                </button>
-                <button class="menu-button" id="button-id" style="width: 50%;" title="編集中のID">
-                    <p class="content">1</p>
-                </button>
-                <button class="menu-button" id="button-id-forward" style="width: 25%;">
-                    <i class="fa-solid fa-angle-right"></i>
-                </button>
+            <div id="buttons-param-id">
             </div>
         </div>
     </div>
