細かな変更

--- a/curve_editor/ui/toolbar.html
+++ b/curve_editor/ui/toolbar.html
@@ -13,7 +13,7 @@
             <button class="menu-button" id="button-copy" title="カーブのコード/IDをコピー">
                 <i class="fa-solid fa-clone fa-sm"></i>
             </button>
-            <button class="menu-button" id="button-read" title="カーブのコードを読み取り" disabled>
+            <button class="menu-button" id="button-read" title="カーブのコードを読み取り">
                 <i class="fa-solid fa-square-up-right fa-sm"></i>
             </button>
             <button class="menu-button" id="button-save" title="プリセットに保存">
